<resources>
    <string name="app_name">submission3BFAA</string>
    <string name="name">Nama</string>
    <string name="number">888</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="work">Bekerja</string>
    <string name="repository">Repository</string>
    <string name="followers">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="profile_picture">Foto Profil</string>
    <string name="setting" translatable="false">Pengaturan</string>
    <string name="link"><u>Tautan</u></string>
    <string name="search">Cari..</string>
    <string name="search_img">Search_img</string>
    <string name="unknown">Tidak diketahui</string>
    <string name="nope">-</string>
    <string name="favorite">Favorit</string>
    <string name="daily_notif_message">Jangan Lupa untuk kembali membuka aplikasi pengguna github</string>
    <string name="reminder">Pengingat</string>
    <string name="language">Bahasa</string>
    <string name="add_to_favorite">Tambahkan ke favorit</string>
    <string name="favorite_users">pengguna favorit</string>
    <string name="delete_from_favorite">Hapus dari favorit</string>
    <string name="notification_reminder">Pengingat Harian</string>
    <string name="notification_disable">Notifikasi Dinonaktifkan</string>
    <string name="notification_enable">Notifikasi Diaktifkan</string>
    <string name="change_language">Ganti Bahasa</string>
</resources>